BroadleafCommerce/QA#2172 - Remove the legacy (pre-2.0)  test execution from the integration project