@@ -59,22 +59,11 @@
                 <executions>
                     <execution>
                         <id>default-test</id>
-                        <configuration>
-                            <skipTests>true</skipTests>
-                            <argLine>-Xmx1024m -XX:MaxPermSize=512m
-                                -Dlegacy=true ${surefire.argLine}</argLine>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>non-legacy-test</id>
                         <phase>test</phase>
                         <goals>
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <excludes>
-                                <exclude>**/Legacy**Test.java</exclude>
-                            </excludes>
                             <argLine>-Xmx1024m -XX:MaxPermSize=512m ${surefire.argLine}</argLine>
                         </configuration>
                     </execution>
@@ -104,39 +93,6 @@
         </plugins>
     </build>
     <profiles>
-        <profile>
-            <!-- Skip legacy tests by default, activated with the Maven 'legacy-test' 
-                profile -->
-            <id>legacy-test</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>legacy-test</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <excludes>
-                                        <exclude>**/OrderTest.java</exclude>
-                                        <exclude>**/CartTest.java</exclude>
-                                        <exclude>**/CheckoutTest.java</exclude>
-                                        <exclude>**/FulfillmentGroupDaoTest.java</exclude>
-                                        <exclude>**/OfferServiceTest.java</exclude>
-                                        <exclude>**/OfferTest.java</exclude>
-                                        <exclude>**/PricingTest.java</exclude>
-                                    </excludes>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>blc-development</id>
             <build>
@@ -176,21 +132,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>legacy-test</id>
-                                <configuration>
-                                    <argLine>
-                                        -Dlegacy=true
-                                        -Xmx1024m
-                                        -XX:MaxPermSize=512m -Xdebug
-                                        -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083
-                                        -agentpath:${jrebel.path}
-                                        -Drebel.log.stdout=true
-                                        ${surefire.argLine}
-                                    </argLine>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>non-legacy-test</id>
+                                <id>default-test</id>
                                 <configuration>
                                     <argLine>
                                         -Xmx1024m
